connector/deployment.yaml
#
# Copyright (c) 2021 T-Systems International GmbH (Catena-X Consortium)
#
# See the AUTHORS file(s) distributed with this work for additional
# information regarding authorship.
#
# See the LICENSE file(s) distributed with this work for
# additional information regarding license terms.
#

# K8 Manifest to expose a connector service in a particular role/configuration (the $ROLE environment variable)
# being configured using the secrets/configs/certificate stores in "connector-config" (protected  by ${KEYSTORE_PASSWORD})
# and being tied to an owned backend postgres database/service ($POSTGRES_RESOURCE_NAME, ${HTTPUSER}, ${POSTGREPARTSMASTERPASSWORD})
# Use envsubst before applying the descriptor

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dataspace-connector${ROLE}
  name: dataspace-connector${ROLE}
  namespace: dataspace-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataspace-connector${ROLE}
  template:
    metadata:
      labels:
        app: dataspace-connector${ROLE}
    spec:
      containers:
        - image: tsicatenaxdevacr.azurecr.io/dataspace-connector:${VERSION}
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          name: dataspace-connector
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: certs-volume
              mountPath: /connector-config
          resources:
            requests:
              memory: 512Mi
              cpu: 0.1
            limits:
              memory: 2Gi
              cpu: 1
      volumes:
        - name: certs-volume
          secret:
            secretName: connector-config
---
apiVersion: v1
kind: Service
metadata:
  name: dataspace-connector${ROLE}
  namespace: dataspace-connector
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: dataspace-connector${ROLE}
