connector/deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataspace-connector-ingress${ROLE}
  namespace: dataspace-connector
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt${CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - hosts:
    - $CATENA_SERVICE_URL
    secretName: certificate${CLUSTER_ISSUER}${ROLE}-secret
  rules:
  - host: $CATENA_SERVICE_URL
    http:
      paths:
      - path: /connector${ROLE}(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dataspace-connector${ROLE}
            port:
              number: 8080
